--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,22 @@
-
-#pianoRollContainer {
+.app {
+  font-family: 'Mulish', sans-serif;
+  cursor: default;
+  background-color: #F0F0F0;
+  color: #1C1C1A;
+  height: 100vh; /* Use viewport height instead of 100% to occupy full screen height */
+  text-align: center;
+  overflow: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  position: relative;
 }
+
+
 
 #buttonContainer {
   display: flex;
   justify-content: center;
 }
-
 
 
 button {
