--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,7 @@
 }
 
 
-
-#buttonContainer {
+.buttonContainer {
   display: flex;
   justify-content: center;
 }
@@ -35,4 +34,8 @@ button {
   border-bottom: 3px solid #381815;  /* A darker shade for 3D effect */
   position: relative;  /* Required for the top movement on hover */
   transition: all 1.1s ease;  /* Transition for all properties */
+}
+
+button:hover {
+  transform: scale(1.05);
 }
