--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,4 @@
-.app {
-  font-family: 'Mulish', sans-serif;
-  cursor: default;
-  background-color: #F0F0F0;
-  color: #1C1C1A;
-  height: 100vh; /* Use viewport height instead of 100% to occupy full screen height */
-  text-align: center;
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
+
 
 
 .buttonContainer {
@@ -27,6 +16,7 @@ button {
   cursor: pointer;
   transition: background-color 0.3s;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 button {
