--- a/src/components/PianoRollDisplay/PianoRollDisplay.css
+++ b/src/components/PianoRollDisplay/PianoRollDisplay.css
@@ -1,7 +1,19 @@
-.pianoRollContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-content: center;
+    justify-items: center;
 }
 
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
+@media (max-width: 480px) {
+    .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
