--- a/src/components/MainRollDisplayView/MainRollDisplayView.css
+++ b/src/components/MainRollDisplayView/MainRollDisplayView.css
@@ -1,14 +1,24 @@
 .main-view {
     width: 100%;
     display: flex;
+    flex-direction: row;
 }
 
 .main-roll {
-    flex: 2;
-
+    flex: 3;
 }
 
 .small-rolls {
     flex: 1;
-
 }
+
+
+.large-small-rolls-layout {
+    display: flex;
+}
+
+.large-roll {
+    flex: 1;
+    padding: 16px;
+}
+
