--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
 
 button {
   padding: 15px 25px;
@@ -28,4 +32,9 @@ button {
 
 button:hover {
   transform: scale(1.05);
+}
+
+button:active {
+  opacity: 0.7%;
+  transition: 0.3s ease-in-out;
 }
