--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,12 @@ button:active {
   opacity: 0.7%;
   transition: 0.3s ease-in-out;
 }
+
+button.disable {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+button.disable:hover {
+  transform: none;
+}
